# practices_mcp_server

./: .bumpversion.cfg  .clinerules  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  custom_instructions.md  install_full.sh  pyproject.toml  setup.py  smithery.yaml  verify_config.py
.github/workflows/: python-app.yml
docs/: configuration_guide.md  developer_documentation.md  user_guide.md  version_compliance_guide.md
docs/llm_context/: configuration_system_guide.md  hooks_headers_usage.md  pr_preparation_guide.md  version_management_guide.md
instructions/: 01_project_overview.md  03_implementation_plan.md  04_branching_strategy.md  06_configuration_system.md  07_resource_templates.md  08_tool_specifications.md  10_jira_workflow.md  11_precommit_license_headers.md  12_mcp_dependency_resolution.md  13_working_directory_implementation.md
memory-bank/: .clinerules  activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
plans/: 02_architecture.md  05_versioning_strategy.md  09_integration_adapters.md  14_branch_tool_parameter_fix.md  15_cli_server_unification.md  16_uvx_direct_invocation_fix.md
src/mcp_server_practices/: __init__.py  mcp_server.py  mcp_server_modern.py  mcp_server_practices.py  tools.py
src/mcp_server_practices/branch/: __init__.py  creator.py  validator.py
src/mcp_server_practices/cli/: __init__.py  commands.py
src/mcp_server_practices/config/: __init__.py  detector.py  hierarchy.py  loader.py  schema.py  templates.py  validator.py
src/mcp_server_practices/headers/: __init__.py  manager.py  templates.py
src/mcp_server_practices/hooks/: __init__.py  installer.py  templates.py
src/mcp_server_practices/integrations/: __init__.py  github.py  jira.py
src/mcp_server_practices/pr/: __init__.py  generator.py  templates.py  workflow.py
src/mcp_server_practices/templates/: __init__.py  system_instructions.md
src/mcp_server_practices/tools/: __init__.py  branch_tools.py  config_tools.py  directory_tools.py  git_tools.py  github_tools.py  license_tools.py  pr_tools.py  version_tools.py
src/mcp_server_practices/utils/: __init__.py  directory_utils.py  global_context.py
src/mcp_server_practices/version/: __init__.py  bumper.py  validator.py
tests/: __init__.py  mock_packages.py
tests/integration/: __init__.py  test_jira_integration.py  test_jira_links.py
tests/unit/: __init__.py  test_branch_validator.py  test_cli_commands.py  test_directory_tools.py  test_file_logging.py  test_github_integration.py  test_headers.py  test_hooks.py  test_keyword_arg_pattern.py  test_pr_functionality.py  test_system_instructions.py  test_tool_registration.py  test_version.py  test_version_management.py
tests/unit/config/: test_detector.py  test_hierarchy.py  test_loader.py  test_schema.py  test_templates.py  test_validator.py
